{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 37,
  "lineage": "b0c569c5-8f4b-491f-1280-0cfef1aceba7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:internet-gateway/igw-01a14ff0397342e97",
            "id": "igw-01a14ff0397342e97",
            "owner_id": "612568755348",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612568755348:loadbalancer/app/MainLoadBalancer/199aab280c772461",
            "arn_suffix": "app/MainLoadBalancer/199aab280c772461",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MainLoadBalancer-1886842148.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:612568755348:loadbalancer/app/MainLoadBalancer/199aab280c772461",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MainLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de5e378384594bd2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e0f7c6aa2c2f810"
              },
              {
                "subnet_id": "subnet-0b86668ba38647d0d"
              }
            ],
            "subnets": [
              "subnet-06e0f7c6aa2c2f810",
              "subnet-0b86668ba38647d0d"
            ],
            "tags": {
              "Name": "MainLoadBalancer"
            },
            "tags_all": {
              "Name": "MainLoadBalancer"
            },
            "vpc_id": "vpc-0a1a82e4ebde6f59a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.main_lb_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612568755348:listener/app/MainLoadBalancer/199aab280c772461/6c7e4917724879d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:612568755348:targetgroup/MainTargetGroup/67332bb90fa2a5da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:612568755348:listener/app/MainLoadBalancer/199aab280c772461/6c7e4917724879d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:612568755348:loadbalancer/app/MainLoadBalancer/199aab280c772461",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main_lb",
            "aws_lb_target_group.main_target_group",
            "aws_security_group.main_lb_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612568755348:targetgroup/MainTargetGroup/67332bb90fa2a5da",
            "arn_suffix": "targetgroup/MainTargetGroup/67332bb90fa2a5da",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:612568755348:targetgroup/MainTargetGroup/67332bb90fa2a5da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MainTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:route-table/rtb-0dc8356eea378acdd",
            "id": "rtb-0dc8356eea378acdd",
            "owner_id": "612568755348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a14ff0397342e97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MainRouteTable"
            },
            "tags_all": {
              "Name": "MainRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad5d6ed646e69e7",
            "route_table_id": "rtb-0dc8356eea378acdd",
            "subnet_id": "subnet-06e0f7c6aa2c2f810"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071ac48dd3ced7dd9",
            "route_table_id": "rtb-0dc8356eea378acdd",
            "subnet_id": "subnet-0b86668ba38647d0d"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:security-group/sg-0de5e378384594bd2",
            "description": "Security group for the main load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de5e378384594bd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MainLBSG",
            "name_prefix": "",
            "owner_id": "612568755348",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MainLBSG"
            },
            "tags_all": {
              "Name": "MainLBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:security-group/sg-055b2c87721dfdd15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055b2c87721dfdd15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MainSG",
            "name_prefix": "",
            "owner_id": "612568755348",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:subnet/subnet-06e0f7c6aa2c2f810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e0f7c6aa2c2f810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612568755348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet10.0.1.0/24"
            },
            "tags_all": {
              "Name": "Subnet10.0.1.0/24"
            },
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:subnet/subnet-0b86668ba38647d0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b86668ba38647d0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612568755348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet10.0.2.0/24"
            },
            "tags_all": {
              "Name": "Subnet10.0.2.0/24"
            },
            "vpc_id": "vpc-0a1a82e4ebde6f59a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612568755348:vpc/vpc-0a1a82e4ebde6f59a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9f168d179317ac8",
            "default_route_table_id": "rtb-0bd6eab6258397f91",
            "default_security_group_id": "sg-092b950ef4bc9529e",
            "dhcp_options_id": "dopt-0269be224b4ee0d4e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1a82e4ebde6f59a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd6eab6258397f91",
            "owner_id": "612568755348",
            "tags": {
              "Name": "MainVpc"
            },
            "tags_all": {
              "Name": "MainVpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}